<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.mezcode.demo.roloscan.ocrreader.StartActivity">

    <TextView android:id="@+id/start_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/startText1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton android:id="@+id/start_photo"
        style="@style/StartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/photo"
        android:onClick="getPhoto"
        android:src="@drawable/btn_photo" />

    <TextView android:id="@+id/start_message2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/startText2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton android:id="@+id/start_gallery"
        style="@style/StartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:contentDescription="@string/gallery_prompt"
        android:onClick="getPhoto"
        android:src="@drawable/btn_gallery" />

    <TextView android:id="@+id/start_message3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/startText3"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View android:id="@+id/snack_anchor"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:background="@null"
        android:layout_gravity="fill_vertical|center_horizontal"/>

    <ProgressBar android:id="@+id/start_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/accent"
        android:layout_gravity="center"
        android:visibility="gone"/>
</LinearLayout>
